@@ -180,6 +180,7 @@ struct Config
 	int stop_match_score;
 	int tantan_maxRepeatOffset;
 	bool tantan_ungapped;
+	string taxon_exclude;
 
 	enum {
 		makedb = 0, blastp = 1, blastx = 2, view = 3, help = 4, version = 5, getseq = 6, benchmark = 7, random_seqs = 8, compare = 9, sort = 10, roc = 11, db_stat = 12, model_sim = 13,
